# ndj_cookie

./: .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  data_dictionary.html  docker-compose.yml  environment.yml  genindex.html  index.html  license.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  reference_etl.html  reference_model.html  reference_post.html  reference_utils.html  search.html  searchindex.js  setup.py
.doctrees/: data_dictionary.doctree  environment.pickle  index.doctree  license.doctree  reference.doctree  reference_etl.doctree  reference_model.doctree  reference_post.doctree  reference_utils.doctree
.github/: CODEOWNERS  labels.json  pull_request_template.md
.github/workflows/: codeql-analysis.yml  coverage.yml  labels.yml  pages.yml  release.yml  test-pypi.yml  tests.yml
_sources/: index.rst.txt  reference.rst.txt  reference_post.rst.txt  reference_utils.rst.txt
data/: example_experiment.yaml
docs/: conf.py  data_dictionary.html  data_dictionary.rst  index.rst  reference.rst  reference_etl.rst  reference_model.rst  reference_utils.rst
my_project/: __init__.py  utils.py
ndj_pipeline/: __init__.py  config.py  data_checks.py  db.py  model.py  post.py  prep.py  transform.py  utils.py
notebooks/: basic_statistics.ipynb  example_notebook.ipynb
schemas/: titanic.yaml
schemas/queries/: chi_squared.sql  dates.sql  t_test.sql  window_distinct.sql  window_lag.sql  window_range.sql  window_ranks.sql  window_rows.sql  withs_random.sql
tests/: __init__.py  conftest.py  test_utils.py
